[SUM-WEB] fixed ie bug for extra space on service models

--- a/index.css
+++ b/index.css
@@ -312,6 +312,16 @@
 }
 
 /* Services */
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) and (min-width: 974px)  {
+  .IE-compatibility{
+    max-height: 400px;
+  }
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) and (max-width: 973px)  {
+  .IE-compatibility{
+    max-height: 300px;
+  }
+}
 
 @media (min-width: 1200px) {
   #services .service-img {
